# declarative-postgres-migrate.rs

./: .cli-flags.toml  Cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
docs/: beyond-just-schema-migrations.md
scripts/: install-crosscheckers.sh  install.sh  test-cockroach.sh
scripts/publish/: github.sh  homebrew.sh
src/: ai.rs  apply.rs  crosscheck.rs  diff.rs  emit.rs  flagenv.rs  introspect.rs  lib.rs  main.rs  model.rs  source.rs  verify.rs
tests/: cli.rs  cockroach.rs  convergence.rs
tests/fixtures/: cockroach_schema.sql
